src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__char_length.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: "#[sqlfunc(sqlname = \"char_length\")]\nfn char_length<'a>(a: &'a str) -> Result<i32, EvalError> {\n    let length = a.chars().count();\n    i32::try_from(length)\n        .or_else(|_| Err(EvalError::Int32OutOfRange(length.to_string().into())))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CharLength;
impl crate::func::EagerUnaryFunc for CharLength {
    type Input<'a> = &'a str;
    type Output<'a> = Result<i32, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        char_length(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for CharLength {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("char_length")
    }
}
fn char_length<'a>(a: &'a str) -> Result<i32, EvalError> {
    let length = a.chars().count();
    i32::try_from(length)
        .or_else(|_| Err(EvalError::Int32OutOfRange(length.to_string().into())))
}
